# transkripin

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
backend/: Cargo.toml  lib.rs  lib_llm.rs
backend/examples/: output.txt  test_transcribe.rs
backend/src/: lib.rs  lib_llm.rs  transcribe.rs
backend/summarize/: Cargo.toml  summarize.did
backend/summarize/src/modules/: mod.rs
backend/summarize/src/modules/llm/: mod.rs
backend/summarize/src/modules/upload/: mod.rs
frontend/: index.css  index.html  (+4 more)
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/common/: mod.rs
src/backend/src/common/base/: mod.rs  storage.rs  usecase.rs
src/backend/src/common/constants/: default.rs  memory.rs  mod.rs  uri.rs
src/backend/src/common/helpers/: call_ollama.rs  date_helper.rs  json_helper.rs  mod.rs
src/backend/src/common/response/: api_response.rs  error_response.rs  mod.rs  service_response.rs
src/backend/src/common/types/: types.rs
src/backend/src/common/utils/: custom_get_random.rs  fixed_to_string.rs  generate_id.rs  json_formatter.rs  mod.rs  string_to_fixed.rs
src/backend/src/modules/: mod.rs
src/backend/src/modules/llm/: mod.rs
src/backend/src/modules/upload/: mod.rs
src/backend/src/modules/upload/application/params/: create_user_params.rs
src/backend/src/modules/upload/application/usecases/: get_user_id_usecase.rs  login_usecase.rs  mod.rs
src/backend/src/modules/upload/handler/: mod.rs  summarize.rs  transcribe.rs  upload.rs
src/backend/src/modules/upload/infrastructure/: mod.rs
src/backend/src/modules/upload/service/: call_ollama.rs  call_transcription.rs  check_artifact_accessible.rs  check_artifact_visibility.rs  fetch_file_artifacts.rs  fetch_transcription.rs  filter_file_artifacts.rs  mod.rs  save_file_artifact.rs  save_final_result.rs
src/backend/src/modules/user/: mod.rs
src/backend/src/modules/user/application/: mod.rs
src/backend/src/modules/user/domain/: mod.rs
src/transcribe/: Cargo.toml
src/transcribe/src/: main.rs
src/transcribe/src/modules/: mod.rs
src/transcribe/src/modules/whisper/: mod.rs
(+103 files in other folders)
