[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-llm = "1.1.0"
anyhow = "1.0"
whisper-rs = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
getrandom = { version = "0.2", features = ["custom"] }

[lib]
name = "backend"
path = "src/lib.rs"
