[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.2"
ic-llm = "1.1.0"
anyhow = "1.0"
base64 = "0.20"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"] 

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[lib]
crate-type = ["cdylib"]
