[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.2"
ic-llm = "1.1.0"
ic-cdk-macros = "0.17.2"   
ic-cdk-timers = "0.10.0"
ic-stable-structures = "0.6.7"
anyhow = "1.0"
base64 = "0.20"
serde_json = "1.0"
futures = "0.3.31"
lazy_static = "1.5.0"
time-macros = "0.2.22"

[dependencies.serde]
version = "1.0"
features = ["derive"] 

[dependencies.rand]
version = "0.9.2"
features = ["std_rng"]
default-features = false

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[dependencies.time]
version = "0.3" 
features = ["serde", "parsing", "formatting", "macros"]

[lib]
crate-type = ["cdylib"]
