[package]
name = "transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
whisper-rs = { version = "0.14.4" }
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
tower-http = { version = "0.6.6", features = ["timeout"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1"
hound = "3.5.0"
tempfile = "3.20.0"

[[bin]]
name = "transcribe"
path = "src/main.rs"
